<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aspha.toyota.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Toyota "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold|normal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zimbabwe"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp"
                    android:textStyle="bold|normal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="  Quality Driven"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="italic|normal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/btnBookService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/curvey_button"
                    android:text="@string/book_service"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/btnAfterSales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/curvey_button"
                    android:text="After Sales"
                    android:textColor="@color/white"/>

                <Button
                    android:visibility="gone"
                    android:id="@+id/btnShowRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/curvey_button"
                    android:text="@string/show_room"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btnShowWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/curvey_button"
                    android:text="@string/website"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btnShowDelears"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/curvey_button"
                    android:text="@string/dealers"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_care"
                        android:textColor="@color/black"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/btnCustomerCare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/curvey_button"
                        android:drawableLeft="@drawable/ic_call_white_24dp"
                        android:drawableStart="@drawable/ic_call_white_24dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/customer_care"

                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/recovery"
                        android:textColor="@color/black"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/btnRecovery"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/curvey_button"
                        android:drawableLeft="@drawable/ic_call_white_24dp"
                        android:drawableStart="@drawable/ic_call_white_24dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/recovery"

                        android:textColor="@color/white"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/copyrights"
            android:textColor="@color/white"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Aspha Project"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>
