<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aspha.toyota.activities.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:padding="10dp">


            <com.aspha.toyota.cwidgets.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/toyota"
                android:textColor="@color/colorPrimary"
                android:textSize="32dp"/>

            <ProgressBar
                android:id="@+id/top_progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_in"
                android:visibility="gone"/>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.aspha.toyota.cwidgets.customfonts.MyEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.aspha.toyota.cwidgets.customfonts.MyEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"/>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.aspha.toyota.cwidgets.customfonts.MyEditText
                    android:id="@+id/con_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/password_rep_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"/>


            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/down_progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_in"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/curvey_buttonaccent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:minHeight="50dp"
                    android:minWidth="140dp"
                    android:text="Sign Up"
                    android:textColor="@android:color/white"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.aspha.toyota.cwidgets.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="I have an Account."
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    />


                <Button
                    android:id="@+id/btnBacktoLohin"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="Log In"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal|bold"

                    />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
